--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
     color: #fff;
+    background-color: #bbb;
 }
 
 .page {
@@ -101,10 +102,6 @@ body {
 }
 
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
 	background-color: #333;
 	color: #fff;
 	padding: 5px;
