--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #bbb;
 }
 
 h1 {
@@ -49,10 +50,6 @@ input[type="checkbox"] {
 }
 
 footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
 	background-color: #333;
 	color: #fff;
 	padding: 5px;
