--- a/views/css/style.css
+++ b/views/css/style.css
@@ -7,8 +7,6 @@ body {
   padding: 0;
   margin: 0;
   height: 100vh;
-  display: grid;
-  place-items: center;
 }
 
 main {
@@ -131,51 +129,9 @@ main {
 
 /*carrosel*/
 /*------------------------------------------------------------*/
-.slider {
-  width: 100%;
-  max-width: 800px;
-  height: 350px;
-  position: relative;
-  /* overflow: hidden; */
-}
-
 .slide {
-  width: 100%;
-  max-width: 800px;
-  height: 350px;
-  position: absolute;
-  transition: all 0.5s;
-}
-
-.slide img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.btn {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  padding: 10px;
-  border: none;
-  border-radius: 50%;
-  z-index: 10px;
-  cursor: pointer;
-  background-color: #fff;
-  font-size: 18px;
-}
-
-.btn:active {
-  transform: scale(1.1);
-}
-
-.btn-prev {
-  top: 45%;
-  left: 2%;
-}
-
-.btn-next {
-  top: 45%;
-  right: 2%;
+  display: block;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
