--- a/views/css/style.css
+++ b/views/css/style.css
@@ -6,7 +6,6 @@ body {
   font-size: 16px;
   padding: 0;
   margin: 0;
-  height: 100vh;
 }
 
 main {
@@ -134,4 +133,17 @@ main {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  margin-bottom: 50px;
+  background-color: #000000;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  margin-top: 30px;
 }
