--- a/views/css/style.css
+++ b/views/css/style.css
@@ -88,11 +88,100 @@ main {
   background-color: rgb(255, 162, 55);
   width: 100%;
   height: 10%;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   border-bottom: 1px solid #000000;
+  padding: 0;
 } 
+
+.pesquisa {
+  border: 1px;
+  font-family: 'Gill Sans', 'Gill Sans MT', 
+  Calibri, 'Trebuchet MS', sans-serif;
+  border-radius: 4%;
+}
+
+.logo-empresa {
+  width: 5%;
+  height: 5%;
+  margin: 0;
+  margin-left: 10%;
+  margin-right: 0;
+  border-radius: 100%;
+}
+
+.sidebar-logo {
+  margin-left: 10px;
+  width: 58px;
+  height: 58px;
+  align-self: center;
+  border-radius: 100%;
+}
+
+ /* Dropdown Button */
+ .dropbtn {
+  background-color: #54c989;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 150px;
+  margin-right: 110px;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #39875c;
+}
+
+/* The search field */
+#myInput {
+  box-sizing: border-box;
+  background-image: url('searchicon.png');
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 14px 20px 12px 45px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+}
+
+/* The search field when it gets focus/clicked on */
+#myInput:focus {outline: 3px solid #ddd;}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 230px;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;} 
 /*------------------------------------------------------------*/
 
 
@@ -115,26 +204,73 @@ main {
 
 /*imagens*/
 /*------------------------------------------------------------*/
-.logo-empresa {
-  width: 5%;
-  height: 5%;
-  flex: 1;
-  margin: 0;
-  margin-left: 10%;
-  padding: 0;
-}
+
 
 /*------------------------------------------------------------*/
 
 /*carrosel*/
 /*------------------------------------------------------------*/
-.slide {
-  display: block;
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  margin-top: 50px;
 }
 
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #000000;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: #e3e3e3b4;
+}
+
+/* Caption text */
+.text {
+  color: #000000;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #000000;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -145,8 +281,18 @@ main {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-  margin-top: 30px;
 }
+
+.active, .dot:hover {
+  background-color: rgb(239, 160, 49);
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
 /*------------------------------------------------------------*/
 
 /*colunas*/
@@ -181,6 +327,7 @@ main {
   width: 150px;
   margin-right: 25px;
   margin-left: 10px;
+  border-radius: 5%;
 }
 
 .noticia-recente p{
