--- a/views/css/style.css
+++ b/views/css/style.css
@@ -548,6 +548,7 @@ label {
 
 input[type="checkbox"] {
   vertical-align: middle;
+}
 /*tela de perfil*/
 /*------------------------------------------------------------*/
 .perfil-foto {
