--- a/views/paginas/telaQuestionario.html
+++ b/views/paginas/telaQuestionario.html
@@ -7,24 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questionário de Bem-Estar</title>
     <link rel="stylesheet" href="../css/style.css">
-    <meta http-equiv="X-UA-Compatible"
-          content="IE=edge">
-    <title>
-        Build a Survey Form using HTML and CSS
-    </title>
+    <script type="text/javascript" src="/views/js/script.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title> Questionario </title>
 </head>
   
 <body class="bodyquest">
     <header class="header-padrao">
-        <img src="../img/logo-menu-sidebar.jpg" class="sidebar-logo">
-        <a href="index.html"> <img src="../img/logo-da-empresa.png" class="logo-empresa"> </a>
+        <img src="/views/img/logo-menu-sidebar.jpg" class="sidebar-logo">
+        <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            <a href=""> Zeca </a>
-            <a href=""> Zezinho </a>
-            <a href=""> Joao </a>
+            <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
+            <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
+            <a href="/views/paginas/TelaPerfil.html"> Joao </a>
           </div>
         </div> 
       </header>
