--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Perfil </title>
   <link rel="stylesheet" href="/views/css/style.css">
+  <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
   <header class="header-padrao">
@@ -14,9 +15,9 @@
       <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
       <div id="myDropdown" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href=""> Zeca </a>
-        <a href=""> Zezinho </a>
-        <a href=""> Joao </a>
+        <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
+        <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
+        <a href="/views/paginas/TelaPerfil.html"> Joao </a>
       </div>
     </div> 
   </header>
