--- a/views/paginas/telaCadastro.html
+++ b/views/paginas/telaCadastro.html
@@ -5,19 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/views/css/style.css">
+    <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body class="background">
   <header class="header-padrao">
-    <img src="../img/logo-menu-sidebar.jpg" class="sidebar-logo">
-    <a href="index.html"> <img src="../img/logo-da-empresa.png" class="logo-empresa"> </a>
+    <img src="/views/img/logo-menu-sidebar.jpg" class="sidebar-logo">
+    <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
     <div class="dropdown">
       <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
       <div id="myDropdown" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href=""> Zeca </a>
-        <a href=""> Zezinho </a>
-        <a href=""> Joao </a>
+        <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
+        <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
+        <a href="/views/paginas/TelaPerfil.html"> Joao </a>
       </div>
     </div> 
   </header>
