--- a/views/paginas/telaChamada.html
+++ b/views/paginas/telaChamada.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Chamada</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/views/css/style.css">
+    <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
     <header class="header-padrao">
-        <img src="../img/logo-menu-sidebar.jpg" class="sidebar-logo">
-        <a href="index.html"> <img src="../img/logo-da-empresa.png" class="logo-empresa"> </a>
+        <img src="/views/img/logo-menu-sidebar.jpg" class="sidebar-logo">
+        <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
           <div id="myDropdown" class="dropdown-content">
             <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            <a href=""> Zeca </a>
-            <a href=""> Zezinho </a>
-            <a href=""> Joao </a>
+            <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
+            <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
+            <a href="/views/paginas/TelaPerfil.html"> Joao </a>
           </div>
         </div> 
       </header>
@@ -24,7 +25,7 @@
     <form class="formquest">
     <ul class="chamada">
         <li class="aluno">
-            <img src="../img/conta1.jpg" alt="Foto do Aluno 1">
+            <img src="/views/img/conta1.jpg" alt="Foto do Aluno 1">
             <div class="info">
                 <span class="nome">Zé</span>
                 <div class="presenca">
@@ -37,7 +38,7 @@
         </li>
         <hr>
         <li class="aluno">
-            <img src="../img/conta2.jpg" alt="Foto do Aluno 2">
+            <img src="/views/img/conta2.jpg" alt="Foto do Aluno 2">
             <div class="info">
                 <span class="nome">Zézão</span>
                 <div class="presenca">
@@ -50,7 +51,7 @@
         </li>
         <hr>
         <li class="aluno">
-            <img src="../img/conta3.jpg" alt="Foto do Aluno 3">
+            <img src="/views/img/conta3.jpg" alt="Foto do Aluno 3">
             <div class="info">
                 <span class="nome">Zézildo</span>
                 <div class="presenca">
@@ -63,7 +64,7 @@
         </li>
         <hr>
         <li class="aluno">
-            <img src="../img/aluno4.jpg" alt="Foto do Aluno 4">
+            <img src="/views/img/aluno4.jpg" alt="Foto do Aluno 4">
             <div class="info">
                 <span class="nome">Zézinho</span>
                 <div class="presenca">
