deletando header e comecando nova

--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -5,21 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Perfil </title>
   <link rel="stylesheet" href="/views/css/style.css">
+  <link rel="stylesheet" href="/views/css/header.css">
   <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
   <header class="header-padrao">
-    <img src="/views/img/logo-menu-sidebar.jpg" class="sidebar-logo">
-    <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
-    <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
-      <div id="myDropdown" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
-        <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
-        <a href="/views/paginas/TelaPerfil.html"> Joao </a>
+    <div>
+      <div class="header-left">
+        left
       </div>
-    </div> 
+      <div class="header-middle">
+        middle
+      </div>
+      <div class="header-right"> 
+        right
+      </div>
+    </div>
   </header>
   <main class="recentes">
     <div class="coluna">
