--- a/views/css/style.css
+++ b/views/css/style.css
@@ -4,8 +4,14 @@ body {
   background-color: rgb(222, 222, 222);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
-  padding: 0;
-  margin: 0;
+  padding-top: 75px;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 
 main {
@@ -82,106 +88,6 @@ main {
 
 /*header*/
 /*------------------------------------------------------------*/
-.header-padrao {
-  display: flex;
-  flex-direction: row;
-  background-color: rgb(255, 162, 55);
-  width: 100%;
-  height: 10%;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: nowrap;
-  border-bottom: 1px solid #000000;
-  padding: 0;
-} 
-
-.pesquisa {
-  border: 1px;
-  font-family: 'Gill Sans', 'Gill Sans MT', 
-  Calibri, 'Trebuchet MS', sans-serif;
-  border-radius: 4%;
-}
-
-.logo-empresa {
-  width: 5%;
-  height: 5%;
-  margin: 0;
-  margin-left: 10%;
-  margin-right: 0;
-  border-radius: 100%;
-}
-
-.sidebar-logo {
-  margin-left: 10px;
-  width: 58px;
-  height: 58px;
-  align-self: center;
-  border-radius: 100%;
-}
-
- /* Dropdown Button */
- .dropbtn {
-  background-color: #54c989;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 10px;
-  width: 150px;
-  margin-right: 110px;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #39875c;
-}
-
-/* The search field */
-#myInput {
-  box-sizing: border-box;
-  background-image: url('searchicon.png');
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
-}
-
-/* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
-
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f6f6f6;
-  min-width: 230px;
-  border: 1px solid #ddd;
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;} 
 /*------------------------------------------------------------*/
 
 
