--- a/views/css/header.css
+++ b/views/css/header.css
@@ -1,9 +1,54 @@
+
 .header-padrao {
   display: flex;
-  background-color: white;
+  background-image: url('/views/img/jungle-background.jpg');
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   height: 70px;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 30px;
+  border-bottom: 1px solid grey;
+  box-shadow: -1px 3px 3px rgba(0, 0, 0, 0.05);
 } 
+
+/* HEADER LEFT */
+.header-left {
+  display: flex;
+  border-top-right-radius: 1px;
+  border-bottom-right-radius: 1px;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 100%;
+  background-color: white;
+}
+
+.hamburguer-sidebar-icon {
+  width: 36px;
+  cursor: pointer;
+}
+
+.header-middle {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-middle img{
+  height: 74px;
+  width: 200px;
+  border-radius: 2px;
+  margin-right: 76px;
+}
+
+.header-middle input {
+  height: 30px;
+  flex: 1;
+  border-radius: 3px;
+  min-width: 0;
+  border: 1.5px solid black;
+}
