--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 /*configs globais*/
 /*------------------------------------------------------------*/
 body {
-  background-color: rgb(222, 222, 222);
-  font-family: Arial, Helvetica, sans-serif;
+  background-image: linear-gradient( rgb(162, 162, 162), rgb(81, 81, 81));
   font-size: 16px;
   padding-top: 75px;
   padding-left: 0;
@@ -12,6 +13,7 @@ body {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 main {
@@ -42,8 +44,6 @@ main {
   width: 50%;
   padding: 0;
   border-spacing: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT',
-  Calibri, 'Trebuchet MS', sans-serif;
   margin-left: auto;
   margin-right: auto;
   border-radius: auto;
@@ -80,8 +80,6 @@ main {
 /*titulos*/
 /*------------------------------------------------------------*/
 .titulo-padrao {
-  font-family: 'Gill Sans', 'Gill Sans MT',
-  Calibri, 'Trebuchet MS', sans-serif;
   font-weight: bold;
 }
 /*------------------------------------------------------------*/
@@ -242,7 +240,6 @@ background-repeat: no-repeat; /* Impede a repetição da imagem */
       .form-control textarea {
           border: 1px solid #777;
           border-radius: 2px;
-          font-family: inherit;
           padding: 10px;
           display: block;
           width: 95%;
@@ -382,8 +379,6 @@ background-repeat: no-repeat; /* Impede a repetição da imagem */
 }
 
 .noticia-recente p{
-  font-family: 'Gill Sans', 'Gill Sans MT',
-  Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
   margin-right: 10px;
 }
@@ -408,8 +403,6 @@ background-repeat: no-repeat; /* Impede a repetição da imagem */
 }
 
 .postagem-recente p{
-  font-family: 'Gill Sans', 'Gill Sans MT',
-  Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
 }
 /*------------------------------------------------------------*/
@@ -478,11 +471,6 @@ input[type="checkbox"] {
   padding: 10px;
   width: 300px;
   margin-left: 170px;
-}
-
-.perfil p, h4, h2 {
-  font-family: 'Gill Sans', 'Gill Sans MT', 
-  Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .perfil h2 {
