--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -4,21 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Perfil </title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="/views/css/style.css">
   <link rel="stylesheet" href="/views/css/header.css">
   <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
-  <header class="header-padrao">
-    <div>
+  <header>
+    <div class="header-padrao">
       <div class="header-left">
-        left
+        <a> 
+          <img class="hamburguer-sidebar-icon" src="/views/img/hamburguer-menu.svg">
+        </a>
       </div>
       <div class="header-middle">
-        middle
+        <img src="/views/img/logo-meninos-do-lago.jpg">
+        <input type="text" placeholder="Search">
       </div>
       <div class="header-right"> 
-        right
+        <img class="perfil-foto-postagem" src="/views/img/conta2.jpg">
       </div>
     </div>
   </header>
