--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -21,11 +21,12 @@
         </a>
       </div>
       <div class="header-middle">
-        <img src="/views/img/logo-meninos-do-lago.jpg">
-        <input type="text" placeholder="Search">
+        <img class="logo-header" src="/views/img/logo-meninos-do-lago.jpg">
+        <input class="searchbar-header" type="text" placeholder="Procurar...">
+        <button><img class="" src="/views/img/search.svg"></button>
       </div>
       <div class="header-right"> 
-        <img class="perfil-foto-postagem" src="/views/img/conta2.jpg">
+        <img class="header-foto-perfil" src="/views/img/conta2.jpg">
       </div>
     </div>
   </header>
