--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -30,53 +30,9 @@
       </div>
     </div>
   </header>
-  <main class="recentes">
-    <div class="coluna">
-      <div class="perfil">
-        <img src="/views/img/conta1.jpg" class="perfil-foto">
-        <h2> Zezinho da Silva </h2>
-        <h4> Meninos do Lago </h4>
-        <h4> 13 Anos </h4>
+  <main> 
+    <div class="" ></div>
 
-      </div>
-    </div>
-    <div class="coluna postagem-perfil">
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-      <div class="postagem-recente">
-        <img src="/views/img/conta1.jpg" class="perfil-foto-postagem">
-        <p class="texto-postagem"> TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO 
-        TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO TEXTO  </p>
-      </div>
-    </div>
   </main>
   <footer class="footer-padrao">
     <p>&copy; 2023 - Todos os direitos reservados</p>
