--- a/views/css/header.css
+++ b/views/css/header.css
@@ -7,6 +7,7 @@
   left: 0;
   right: 0;
   height: 70px;
+  z-index: 100;
   align-items: center;
   justify-content: space-between;
   box-shadow: -1px 3px 3px rgba(0, 0, 0, 0.05);
