--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Perfil </title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <script src="https://unpkg.com/feather-icons"></script>
+  <title> Página de Perfil </title>
   <link rel="stylesheet" href="/views/css/style.css">
   <link rel="stylesheet" href="/views/css/header.css">
   <script type="text/javascript" src="/views/js/script.js"></script>
@@ -31,15 +27,36 @@
     </div>
   </header>
   <main> 
-    <div class="" ></div>
+    <div class="external-flex-profile">
+      <div class="profile-section-profile">
+        
+      </div>
+      <div class="post-section-profile">
 
+      </div>
+    </div>
   </main>
-  <footer class="footer-padrao">
-    <p>&copy; 2023 - Todos os direitos reservados</p>
-      <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
-      <p><a>Termos de uso</a></p>
-      <p><a>Política de privacidade</a></p>
-      <p><a>Sobre nós</a></p>
+  <footer>
+    <div class="footer-padrao">
+      <div>
+        <div>
+          <p>&copy; 2023 - Todos os 
+            direitos reservados</p>
+        </div>
+        <div>
+          <p>Entre em contato pelo 
+            e-mail: groyerccl@gmail.com</p>
+        </div>
+        <div>
+          <p>Termos de uso<a href=""></a></p>
+        </div>
+        <div>
+          <p>Política de privacidade<a href=""></a></p>
+        </div>
+        <div>
+          <p>Sobre nós<a href=""></a></p>
+        </div>
+    </div>
   </footer>
 </body>
 </html>
