--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -29,7 +29,10 @@
   <main> 
     <div class="external-flex-profile">
       <div class="profile-section-profile">
-        
+        <div>
+          <img class="profile-picture-profile" src="/views/img/conta1.jpg">
+        </div>
+        <div><h2 class="profile-name-profile">José Serafim</h2></div>
       </div>
       <div class="post-section-profile">
 
