--- a/views/css/style.css
+++ b/views/css/style.css
@@ -6,7 +6,6 @@ body {
   background-image: linear-gradient( rgb(162, 162, 162), rgb(81, 81, 81));
   font-size: 16px;
   padding-top: 100px;
-  padding-bottom: 200px;
   padding-left: 0;
   padding-right: 0;
   margin: 0;
@@ -24,19 +23,11 @@ main {
 /*footer*/
 /*------------------------------------------------------------*/
 .footer-padrao {
-  display: flex;
-  flex-direction: column;
-  position: relative;
+  text-align: center;
+  padding: 20px;
   background-color: black;
   color: white;
-  align-items: center;
-  justify-content: center;
   text-align: center;
-  height: -3em;
-  margin-top: 40em;
-  bottom: 0;
-  left: 0;
-  right: 0;
 } 
 /*------------------------------------------------------------*/
 
@@ -397,11 +388,18 @@ input[type="checkbox"] {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: linear-gradient(to left , #fff7ea, rgb(225, 225, 225));
   width: 40%;
+  padding-left: 30px;
+  padding-right: 30px;
   background-color: rgb(219, 219, 219);
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
   box-shadow: 10px 5px 20px 10px rgba(0, 0, 0, 0.05);
+  border-right: 10px solid rgb(252, 174, 84);
+  border-top: 5px solid rgb(252, 174, 84);
+  border-left: 5px solid rgb(252, 174, 84);
+  border-bottom: 5px solid rgb(252, 174, 84);
 }
 
   .profile-picture-profile {
@@ -410,15 +408,76 @@ input[type="checkbox"] {
     border: 2px solid rgb(252, 174, 84);
   } 
 
+  .profile-name-profile,
+    .profile-age-profile {
+    color: rgb(120, 64, 0);
+    font-weight: 700;
+    text-align: center;
+  }
+
   .profile-name-profile {
-    color: rgb(252, 174, 84)
+    font-size: 38px;
+  }
+
+  .profile-age-profile {
+    font-size: 28px;
+  }
+
+  .profile-bio-profile {
+    flex: 1;
+    font-size: 18px;
+    font-weight: 400;
+    color: rgb(120, 64, 0) ;
   }
 
 .post-section-profile {
-  width: 58%;
+  display: flex;
+  flex-direction: column;
+  width: 100vh;
   background-color: rgb(219, 219, 219);
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
   box-shadow: 10px 5px 20px 10px rgba(0, 0, 0, 0.05);
+  border-left: 10px solid rgb(252, 174, 84);
+  border-top: 5px solid rgb(252, 174, 84);
+  border-right: 5px solid rgb(252, 174, 84);
+  border-bottom: 3px solid rgb(252, 174, 84);
+}
+/*------------------------------------------------------------*/
+
+/* posts */
+/*------------------------------------------------------------*/
+.post-profile {
+  background-color: #ffffff;
+  flex: 1;
+  display: flex; 
+  border-bottom: 2px solid rgb(252, 174, 84); 
+}
+
+.post-left-profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to right, #fff7ea, rgb(225, 225, 225));
+  width: 20%;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-right: -6px;
+}
+
+.post-picture-profile {
+  width: 10vh;
+  border-radius: 5vh;
+  border: 1px solid rgb(252, 174, 84);
+}
+
+.post-text-profile {
+  background-color: rgb(225, 225, 225);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+
 }
 /*------------------------------------------------------------*/
