--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -26,7 +26,7 @@
       </div>
     </div>
   </header>
-  <main> 
+  <main style="display: flex;"> 
     <div class="external-flex-profile">
       <div class="profile-section-profile">
         <div>
