--- a/views/paginas/telaChamada.html
+++ b/views/paginas/telaChamada.html
@@ -8,18 +8,22 @@
     <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
 <body>
-    <header class="header-padrao">
-        <img src="/views/img/logo-menu-sidebar.jpg" class="sidebar-logo">
-        <a href="/index.html"> <img src="/views/img/logo-da-empresa.png" class="logo-empresa"> </a>
-        <div class="dropdown">
-          <button onclick="myFunction()" class="dropbtn"> Pesquisar </button>
-          <div id="myDropdown" class="dropdown-content">
-            <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-            <a href="/views/paginas/TelaPerfil.html"> Zeca </a>
-            <a href="/views/paginas/TelaPerfil.html"> Zezinho </a>
-            <a href="/views/paginas/TelaPerfil.html"> Joao </a>
+    <header>
+        <div class="header-padrao">
+          <div class="header-left">
+            <a> 
+              <img class="hamburguer-sidebar-icon" src="/views/img/hamburguer-menu.svg">
+            </a>
           </div>
-        </div> 
+          <div class="header-middle">
+            <img class="logo-header" src="/views/img/logo-meninos-do-lago.jpg">
+            <input class="searchbar-header" type="text" placeholder="Procurar...">
+            <button><img class="" src="/views/img/search.svg"></button>
+          </div>
+          <div class="header-right"> 
+            <img class="header-foto-perfil" src="/views/img/conta2.jpg">
+          </div>
+        </div>
       </header>
     <h1>Canoagem - Turma 1</h1>
     <form class="formquest">
