--- a/views/paginas/telaCadastro.html
+++ b/views/paginas/telaCadastro.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/views/css/style.css">
     <script type="text/javascript" src="/views/js/script.js"></script>
 </head>
-<body class="background">
+<body>
   <header class="header">
     <div class="header-left" onclick="openNav()">
       <img class="logo-image" src="/views/img/logo-da-empresa.png">
@@ -33,29 +33,19 @@
       <h2 class="header-profile-name"> Zeca Figueiredo </h2>
     </div>
   </header>
-    <div class="page">
-        <form method="POST" class="formLogin">
-            <h1>Cadastrar</h1>
-            <p>Digite os seus dados para cadastrar nos campos abaixo.</p>
-            <label for="name">Nome</label>
-            <input type="name" placeholder="Digite seu nome Completo" />
-            <label for="email">E-mail</label>
-            <input type="email" placeholder="Digite seu e-mail" autofocus="true" />
-            <label for="password">Senha</label>  
-            <input type="password" placeholder="Digite sua senha" />
-            <label for="password">Confirmar Senha</label>  
-            <input type="password" placeholder="Confirme sua senha" />
-            <a href="telaLogin.html">Já tenho conta</a>
-            <input type="submit" value="Cadastrar" class="btn" />
-        </form>
-    </div>
-    <footer class="footer-padrao">
-      <p>&copy; 2023 - Todos os direitos reservados</p>
-        <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
-        <p><a>Termos de uso</a></p>
-        <p><a>Política de privacidade</a></p>
-        <p><a>Sobre nós</a></p>
-    </footer>
+  
+  <main>
+    
+
+  </main>
+
+  <footer class="footer-padrao">
+    <p>&copy; 2023 - Todos os direitos reservados</p>
+      <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
+      <p><a>Termos de uso</a></p>
+      <p><a>Política de privacidade</a></p>
+      <p><a>Sobre nós</a></p>
+  </footer>
     
 </body>
 </html>
