--- a/views/paginas/TelaPerfil.html
+++ b/views/paginas/TelaPerfil.html
@@ -20,13 +20,13 @@
       <h2 class="header-profile-name"> Zeca Figueiredo </h2>
     </div>
   </header>
-  <div id="sidebarContainer" class="container-sidebar">
+  <div id="sidebarContainer" class="container-sidebar hidden">
     <a href="javascript:void(0)" id="closeAnchor" class="close-sidebar" onClick="closeNav()">&#10006</a>
     <div class="sidebar-element">
       <a class="sidebar-element__anchor" href="telaTimeline.html"> TIMELINE </a>
     </div>
   </div>
-  <div id="dropdownMenuProfile" class="dropdown-menu">
+  <div id="dropdownMenuProfile" class="dropdown-menu hidden">
     <div class="dropdown-menu__element">
       <img src="../img/user.svg">
       <p> Perfil </p>
