--- a/views/paginas/telaChamada.html
+++ b/views/paginas/telaChamada.html
@@ -4,39 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Chamada</title>
-    <link rel="stylesheet" href="/views/css/style.css">
-    <script type="text/javascript" src="/views/js/script.js"></script>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header-left" onclick="openNav()">
-          <img class="logo-image" src="/views/img/logo-da-empresa.png">
-          <p class="hamburguer-menu-image">&#9776;</p>
-    
-          <div id="mySidebar" class="sidebar">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Item 1</a>
-            <a href="#">Item 2</a>
-            <a href="#">Item 3</a>
-          </div>
+    <div class="header">
+        <div class="header-left">
+          <input type="image" src="logo-menu-sidebar.jpg" name="saveForm" class="sidemenu" id="saveForm" />
         </div>
-        <div class="header-middle">
-          <div class="vertical-decoration-line"></div>
-          <div class="container-searchbar">
-            <button class="header-searchbar-button"><img src="/views/img/search.svg"></button>
-            <input class="header-searchbar" placeholder="Buscar..." type="text">
-          </div>
+        <div class="header-center">
+          <input type="image" src="logo-da-empresa.png" name="saveForm" class="logo" id="saveForm" />
         </div>
         <div class="header-right">
-          <img class="header-profile-picture" src="/views/img/conta1.jpg">
-          <h2 class="header-profile-name"> Zeca Figueiredo </h2>
+          <input type="text" placeholder="Digite o que deseja pesquisar..." class="pesquisa">
+          <button class="botao"> PESQUISAR </button>
         </div>
-      </header>
+      </div>
     <h1>Canoagem - Turma 1</h1>
-    <form class="formquest">
     <ul class="chamada">
         <li class="aluno">
-            <img src="/views/img/conta1.jpg" alt="Foto do Aluno 1">
+            <img src="aluno1.jpg" alt="Foto do Aluno 1">
             <div class="info">
                 <span class="nome">Zé</span>
                 <div class="presenca">
@@ -49,7 +35,7 @@
         </li>
         <hr>
         <li class="aluno">
-            <img src="/views/img/conta2.jpg" alt="Foto do Aluno 2">
+            <img src="aluno2.jpg" alt="Foto do Aluno 2">
             <div class="info">
                 <span class="nome">Zézão</span>
                 <div class="presenca">
@@ -62,7 +48,7 @@
         </li>
         <hr>
         <li class="aluno">
-            <img src="/views/img/conta3.jpg" alt="Foto do Aluno 3">
+            <img src="aluno3.jpg" alt="Foto do Aluno 3">
             <div class="info">
                 <span class="nome">Zézildo</span>
                 <div class="presenca">
@@ -75,7 +61,7 @@
         </li>
         <hr>
         <li class="aluno">
-            <img src="/views/img/aluno4.jpg" alt="Foto do Aluno 4">
+            <img src="aluno4.jpg" alt="Foto do Aluno 4">
             <div class="info">
                 <span class="nome">Zézinho</span>
                 <div class="presenca">
@@ -88,13 +74,14 @@
         </li>
         <!-- Adicione mais alunos conforme necessário -->
     </ul>
-</form>
-    <footer class="footer-padrao">
+    <footer>
         <p>&copy; 2023 - Todos os direitos reservados</p>
-          <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
-          <p><a>Termos de uso</a></p>
-          <p><a>Política de privacidade</a></p>
-          <p><a>Sobre nós</a></p>
-      </footer>
+        <p>Entre em contato pelo e-mail: contato@exemplo.com</p>
+        <nav>
+                <P><a>Termos de uso</a></P>
+                <P><a>Política de privacidade</a></P>
+                <P><a>Sobre nós</a></P>
+        </nav>
+    </footer>
 </body>
 </html>
