--- a/views/css/style.css
+++ b/views/css/style.css
@@ -2,9 +2,19 @@
 
 /*configs globais*/
 /*------------------------------------------------------------*/
+
 a:visited {
   text-decoration: none;
   color: black;
+}
+
+
+.center-text {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 a {
@@ -17,15 +27,17 @@ body {
   margin-right: 0;
   margin-left: 0;
   margin-bottom: 0;
-  padding-top: 12vh;
+  padding-top: 10vh;
   padding-right: 0;
   padding-left: 0;
   padding-bottom: 0;
   font-family: 'Roboto', 'sans-sariff';
+  background-color: rgb(239, 239, 231);
 }
 
 .flex-main {
   display: flex;
+  flex-direction: column;
 }
 
 main {
@@ -38,12 +50,16 @@ main {
 /*footer*/
 /*------------------------------------------------------------*/
 .footer-padrao {
-  text-align: center;
-  margin-top: 50px;
-  padding: 20px;
-  background-color: black;
-  color: white;
-  text-align: center;
+  display: flex;
+  background-color: #ffffff;
+  border-top: 1px solid rgb(214, 214, 214);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0px -1px 100px rgba(0, 0, 0, 0.2);
+  height: 10vh;
+  align-items: center;
 } 
 /*------------------------------------------------------------*/
 
@@ -285,28 +301,25 @@ main {
 }
 
 /*------------------------------------------------------------*/
-
-/* header */
-/*------------------------------------------------------------*/
-
 /* sidebar */
 
 .container-sidebar {
+  display: flex;
   height: 100%;
-  width: 0;
   position: fixed;
+  width: 0px;
+  transition: 0.05s;
   top: 0;
   left: 0;
-  background-color: #f0f0f0;
-  transition: 0.15s;
-  padding-top: 20px;
+  background-color: #3d3d3d;
+  padding-top: 200px;
 }
 
 .close-sidebar {
-  position: absolute;
   right: 0;
   margin-right: 40px;
   margin-bottom: 40px;
+  margin-left: 90%;
   color: #ffa114;
   text-decoration: 0;
 }
@@ -316,14 +329,16 @@ main {
   width: 100%;
   height: 10%;
   display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
   position: absolute;
+  visibility: hidden;
+  transition: 0.05s;
 }
 
 .sidebar-element__anchor {
   flex: 1;
-  position: absolute;
 }
 
 .header {
@@ -346,6 +361,7 @@ main {
   background-color: rgb(255, 255, 255);
   align-items: center;
   justify-content: center;
+  padding-left: 20px;
 }
 
 .logo-image {
@@ -368,26 +384,23 @@ main {
   font-size: 12px;
   color: #ffa114;
   transition: 0.15s;
+  transform: rotate("none");
 }
 
 .dropdown-menu {
-  display: none;
+  visibility: hidden;
+  display: flex;
   background-color: #fefefe;
   width: 25vh;
-  height: 125px;
+  height: 0px;
   position: absolute;
-  right: 1px;
-  transition: 0.15s;
-  margin-right: 1px;
+  right: 85px;
   z-index: 1000;
+  transition: 0.05s;
   flex-direction: column;
   border-radius: 2px;
   border: 1px solid rgb(55, 137, 0);
   color: #535353;
-}
-
-.hidden {
-  display: none;
 }
 
 .dropdown-menu__element {
@@ -413,6 +426,7 @@ main {
   height: 75%;
   margin-right: 3vh;
   border-radius: 30px;
+  margin-right: 0;
 } 
 
 .container-searchbar {
@@ -436,23 +450,22 @@ main {
     color: #b8b8b8;
   }
 
-.header-right {
-  background-color: rgb(255, 255, 255);
-  display: flex;
-  position: absolute;
-  right: 0;
-  width: 25vh;
-  flex: 1;
-  cursor: pointer;
-  padding-left: 30vh;
-  align-items: center;
-  text-align: center;
-  position: absolute;
-  right: 0;
-  height: 100%;
-  z-index: -1;
-  padding-right: 5vh;
-}
+  .header-right {
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    position: absolute;
+    right: 0;
+    flex: 1;
+    cursor: pointer;
+    padding-left: 30vh;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    height: 100%;
+    padding-right: 5vh;
+    z-index: -1;
+  }
 .header-profile-picture {
   border-radius: 50%;
   border: 2px solid white;
@@ -650,7 +663,13 @@ td.missed-col {
 
 .name-col {
   text-align: left;
+  background-color: #ffffff;
 }
+
+.attend-col {
+  background-color: #ffffff;
+}
+
 .table-container{
   max-width: 70%;
   overflow-x: auto;
@@ -658,6 +677,12 @@ td.missed-col {
   align-items: center;
   height: 70vh;
   margin: 0;
+}
+
+/* Set border-spacing for the entire table (including th) */
+.table-chamada {
+  border-collapse: separate;
+  border-spacing: 0.7px;
 }
 
 th.name-col,
@@ -675,5 +700,4 @@ th.name-col {
 }
 td.name-col {
   border-right: 2px solid rgb(227, 227, 227);
-  
 }
