--- a/views/paginas/telaMesChamada.html
+++ b/views/paginas/telaMesChamada.html
@@ -9,29 +9,17 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-left" onclick="openNav()">
-          <img class="logo-image" src="/views/img/logo-da-empresa.png">
-          <p class="hamburguer-menu-image">&#9776;</p>
-    
-          <div id="mySidebar" class="sidebar">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Item 1</a>
-            <a href="#">Item 2</a>
-            <a href="#">Item 3</a>
-          </div>
-        </div>
-        <div class="header-middle">
-          <div class="vertical-decoration-line"></div>
-          <div class="container-searchbar">
-            <button class="header-searchbar-button"><img src="/views/img/search.svg"></button>
-            <input class="header-searchbar" placeholder="Buscar..." type="text">
-          </div>
-        </div>
-        <div class="header-right">
-          <img class="header-profile-picture" src="/views/img/conta1.jpg">
-          <h2 class="header-profile-name"> Zeca Figueiredo </h2>
-        </div>
-      </header>
+      <div class="header-left" onclick="openNav()">
+        <img class="logo-image" src="../img/logo-da-empresa.png">
+        <p class="hamburguer-menu-image">&#9776;</p> 
+        <div class="vertical-decoration-line"></div>
+      </div>
+      <div class="header-right" id="headerRight">
+        <p id="dropdownArrow" class="dropdown-arrow">&#11167</p>
+        <img class="header-profile-picture" src="/views/img/conta1.jpg">
+        <h2 class="header-profile-name"> Zeca Figueiredo </h2>
+      </div>
+    </header>
 
       <div class="meses-container">
         <a href="telaChamada.html">Janeiro</a>
